FullSb1-27-apr-15/src/objects/Finance_Transactions__c.object
<CustomObject>
    <fields>
        <fullName>Action_Code__c</fullName>
        <label>Action Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Received_New__c</fullName>
        <label>Amount Received Converted</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <label>Amount Received</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Card_Last_4__c</fullName>
        <label>Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Text__c</fullName>
        <label>Error Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_RecordTypeId__c</fullName>
        <description>used to check if finance is of ext. housing type if so then only triggers related to ext. housing will fire.</description>
        <formula>CASESAFEID(  Finance__r.RecordTypeId )</formula>
        <label>Finance RecordTypeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance__c</fullName>
        <label>Finance</label>
        <referenceTo>Opportunity_Finance__c</referenceTo>
        <relationshipLabel>Finance Transactions</relationshipLabel>
        <relationshipName>Finance_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes_or_Comments__c</fullName>
        <label>Notes or Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Agent_Email_Address__c</fullName>
        <label>OP:Agent Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OP_Applicant_Name__c</fullName>
        <formula>Finance__r.Opportunity__r.Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Application_Fee_Due__c</fullName>
        <formula>Finance__r.Opportunity__r.Program__r.Application_Fee_Lookup__r.Application_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Application Fee Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Deposit_Amount_Du__c</fullName>
        <formula>IF( ISPICKVAL(Transaction_Type__c,&quot;Confirmation Deposit&quot;),  Finance__r.Opportunity__r.Program__r.Confirmation_Deposit__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Deposit Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Indirect_Manager_Email_Address__c</fullName>
        <label>OP:Indirect Manager Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OP_Transaction_Method_Index__c</fullName>
        <formula>IF(  
   (Text(Transaction_Status__c) = &quot;Success&quot;||Text(Transaction_Status__c) = &quot;Manually Processed&quot;), 
   (CASE( 
        Transaction_Method__c , &quot;CC Charged Via Salesforce&quot;, 1, &quot;CC Charged via HK&quot;, 2,&quot;Wire Transfer&quot;,3,&quot;Manual Credit Card&quot;,4,0)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Transaction Method Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Ext_API__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Ext API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <formula>Finance__r.Student_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_Time__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Transaction Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Method__c</fullName>
        <label>Transaction Method</label>
        <picklist>
            <picklistValues>
                <fullName>CC CHARGED VIA DUBAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC CHARGED VIA HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC CHARGED VIA LONDON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC CHARGED VIA LUZERN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC CHARGED VIA MIAMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC CHARGED VIA Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From Top Apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PaytoStudy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US. Dept. of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIRE TRANSFER DUBAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIRE TRANSFER HONG KONG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIRE TRANSFER LONDON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIRE TRANSFER LUZERN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Performed_By__c</fullName>
        <formula>CreatedBy.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Performed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_State__c</fullName>
        <label>Transaction State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manually Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction Timed Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmation Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Fee Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Fee Payment AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund AR - Loan Payoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund AR - Specialization Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Writeoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Writeoff AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Writeoff AR - Recharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Writeoff AR - Specialization Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation Deposit Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotation Fee AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Loan Disbursement 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Loan Disbursement 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Loan Disbursement 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Loan Disbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus Loan Disbursement 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus Loan Disbursement 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus Loan Disbursement 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projected US Dept. of Education Loan Pmt. 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projected US Dept. of Education Loan Pmt. 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projected US Dept. of Education Loan Pmt. 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projected US Dept. of Education Loan Refund 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projected US Dept. of Education Loan Refund 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projected US Dept. of Education Loan Refund 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pell Grant Disbursement 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Finance Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Amount_Received__c</columns>
        <columns>Amount_Received_New__c</columns>
        <columns>Transaction_Method__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Finance__c</columns>
        <columns>Transaction_ID__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Error_Text__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>946644</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Amount_Received__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Student_ID__c</columns>
        <columns>NAME</columns>
        <columns>OP_Applicant_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Refund</value>
        </filters>
        <filters>
            <field>Transaction_Date_Time__c</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>Refund List</label>
    </listViews>
    <listViews>
        <fullName>Fall_DL1</fullName>
        <columns>Transaction_Type__c</columns>
        <columns>Student_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Amount_Received__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Direct Loan Disbursement 1</value>
        </filters>
        <label>Fall DL</label>
    </listViews>
    <nameField>
        <displayFormat>FTN-{000000}</displayFormat>
        <label>Finance Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>